tests/NormalTests/paczka1/fuzzy1/33529749.err
Error in line 2: 9K7pf S385 4,6
Error in line 39: 9K7pf S372 57,4
